[gd_scene load_steps=13 format=3 uid="uid://xlx480mlht4a"]

[ext_resource type="Script" uid="uid://c1rcc3jhg6w2o" path="res://scenes/main_menu.gd" id="1_ekxnf"]
[ext_resource type="Texture2D" uid="uid://mpfbggjloyrs" path="res://assets/background/main_menu.png" id="2_bqqt6"]
[ext_resource type="AudioStream" uid="uid://cm2ljbfves4nx" path="res://assets/music/main_menu.mp3" id="3_bqqt6"]
[ext_resource type="Script" uid="uid://cx7j1x63a26j3" path="res://scenes/audio_control.gd" id="4_wu84c"]
[ext_resource type="Script" uid="uid://33iyc3sb1puf" path="res://scenes/fullscreen_control.gd" id="5_8ln24"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wu84c"]
texture = ExtResource("2_bqqt6")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ln24"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rtw2f"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oa1go"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_bqqt6"]
color = Color(1, 1, 1, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_wu84c"]
color = Color(1, 0, 0, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_8ln24"]
color = Color(1, 0, 0, 1)
thickness = 6

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ekxnf")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_wu84c")

[node name="MainButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.477
anchor_top = 0.701
anchor_right = 0.477
anchor_bottom = 0.701
offset_left = -175.504
offset_top = -88.248
offset_right = 176.496
offset_bottom = 88.752
grow_horizontal = 2
grow_vertical = 0

[node name="play" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rtw2f")
theme_override_styles/normal = SubResource("StyleBoxFlat_oa1go")
text = "Start Game"

[node name="option" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rtw2f")
theme_override_styles/normal = SubResource("StyleBoxFlat_oa1go")
text = "Option"

[node name="exit" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rtw2f")
theme_override_styles/normal = SubResource("StyleBoxFlat_oa1go")
text = "Exit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_bqqt6")
autoplay = true
bus = &"Music"

[node name="Settings" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.486
anchor_top = 0.518
anchor_right = 0.486
anchor_bottom = 0.518
offset_left = -252.872
offset_top = -222.664
offset_right = 258.128
offset_bottom = 236.336
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Settings"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -253.5
offset_right = 253.5
offset_bottom = 78.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="back" type="Button" parent="Settings"]
offset_left = 73.0
offset_top = 379.0
offset_right = 422.0
offset_bottom = 439.0
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rtw2f")
theme_override_styles/normal = SubResource("StyleBoxFlat_oa1go")
text = "Back"

[node name="VBoxContainer" type="VBoxContainer" parent="Settings"]
layout_mode = 0
offset_left = 78.0
offset_top = 195.0
offset_right = 443.0
offset_bottom = 305.0
theme_override_constants/separation = 24

[node name="AudioControl" type="HSlider" parent="Settings/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxLine_bqqt6")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_wu84c")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_8ln24")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("4_wu84c")
audio_bus_name = "Music"

[node name="Label" type="Label" parent="Settings/VBoxContainer/AudioControl"]
layout_mode = 0
offset_top = -70.0
offset_right = 362.0
offset_bottom = -28.0
theme_override_font_sizes/font_size = 30
text = "Music"

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/VBoxContainer/AudioControl/Label"]
layout_mode = 2
offset_left = 3.0
offset_top = -19.0
offset_right = 368.0
offset_bottom = 6.0

[node name="FullscreenControl" type="CheckButton" parent="Settings/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Fullscreen"
script = ExtResource("5_8ln24")

[connection signal="pressed" from="MainButtons/play" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MainButtons/option" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MainButtons/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Settings/back" to="." method="_on_back_options_pressed"]
[connection signal="value_changed" from="Settings/VBoxContainer/AudioControl" to="Settings/VBoxContainer/AudioControl" method="_on_value_changed"]
[connection signal="toggled" from="Settings/VBoxContainer/FullscreenControl" to="." method="_on_fullscreen_control_toggled"]
